--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -11,6 +11,7 @@ google-api-core==1.13.0
 google-auth==1.6.3
 google-cloud-core==1.0.2
 google-cloud-datastore==1.8.0
+google-cloud-logging==1.12.1
 googleapis-common-protos==1.6.0
 google-api-python-client==1.7.9
 google-auth-httplib2==0.0.3
