--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -6,11 +6,16 @@ requests>=2.7.0
 cachetools==3.1.1
 certifi==2019.6.16
 chardet==3.0.4
+dashbot==0.0.18
 google-api-core==1.13.0
 google-auth==1.6.3
 google-cloud-core==1.0.2
 google-cloud-datastore==1.8.0
+google-cloud-logging==1.12.1
 googleapis-common-protos==1.6.0
+google-api-python-client==1.7.9
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.0
 grpcio==1.21.1
 idna==2.8
 protobuf==3.8.0
