--- a/m_dining/flask/cloudbuild.yaml
+++ b/m_dining/flask/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
-  dir: 'flask'
+  dir: 'm_dining/flask'
 timeout: "1600s"
