Trying to add headers in app.yaml

--- a/m_proxy/flask/app.yaml
+++ b/m_proxy/flask/app.yaml
@@ -1,2 +1,7 @@
 runtime: python37
 service: mproxy
+handlers:
+- url: /.*
+  script: main.app
+  http_headers: 
+    Access-Control-Allow-Origin: "*"
