--- a/m_proxy/flask/requirements.txt
+++ b/m_proxy/flask/requirements.txt
@@ -8,6 +8,7 @@ certifi==2019.6.16
 chardet==3.0.4
 dashbot==0.0.18
 dialogflow==0.6.0
+flask-cors==3.0.8
 google-api-core==1.13.0
 google-auth==1.6.3
 google-cloud-core==1.0.2
